tests/baselines/reference/unusedMultipleParameter2InFunctionExpression.errors.txt
tests/cases/compiler/unusedMultipleParameter2InFunctionExpression.ts(2,21): error TS6133: Parameter 'person' has never been used.
tests/cases/compiler/unusedMultipleParameter2InFunctionExpression.ts(2,54): error TS6133: Parameter 'person3' has never been used.
tests/cases/compiler/unusedMultipleParameter2InFunctionExpression.ts(3,9): error TS6132: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedMultipleParameter2InFunctionExpression.ts (3 errors) ====
    
    var func = function(person: string, person2: string, person3: string) {
                        ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person' has never been used.
                                                         ~~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person3' has never been used.
        var unused = 20;
            ~~~~~~
!!! error TS6132: Variable 'unused' has never been used.
        person2 = "Dummy value";
    }